@@ -7,32 +7,32 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.17 (gritter) 7/30/06";
+	"@(#)/usr/ucb/otfdump.sl	7.18 (gritter) 7/30/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.17 (gritter) 7/30/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.17 (gritter) 7/30/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.18 (gritter) 7/30/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.18 (gritter) 7/30/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.17 (gritter) 7/30/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.18 (gritter) 7/30/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.17 (gritter) 7/30/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.18 (gritter) 7/30/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.17";
+const char revision[] = "7.18";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.63 (gritter) 7/30/06
+ext.h: * Sccsid @(#)ext.h	1.64 (gritter) 7/30/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
 n1.c: * Sccsid @(#)n1.c	1.88 (gritter) 7/29/06
 n2.c: * Sccsid @(#)n2.c	1.25 (gritter) 7/30/06
 n3.c: * Sccsid @(#)n3.c	1.117 (gritter) 7/30/06
-n4.c: * Sccsid @(#)n4.c	1.38 (gritter) 7/30/06
+n4.c: * Sccsid @(#)n4.c	1.39 (gritter) 7/30/06
 n5.c: * Sccsid @(#)n5.c	1.64 (gritter) 7/30/06
 n7.c: * Sccsid @(#)n7.c	1.79 (gritter) 7/29/06
 n8.c: * Sccsid @(#)n8.c	1.31 (gritter) 7/29/06
-n9.c: * Sccsid @(#)n9.c	1.51 (gritter) 7/29/06
+n9.c: * Sccsid @(#)n9.c	1.52 (gritter) 7/30/06
 ni.c: * Sccsid @(#)ni.c	1.32 (gritter) 7/29/06
 nii.c: * Sccsid @(#)nii.c	1.39 (gritter) 7/29/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.103 (gritter) 7/30/06
+tdef.h: * Sccsid @(#)tdef.h	1.105 (gritter) 7/30/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.27 (gritter) 7/19/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.41 (gritter) 7/29/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.40 (gritter) 7/29/06
